welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:4: error: too many arguments for method estFaceMur: ()Boolean
while(!estSurBiscuit){avance();};recule();poseBiscuit();recule()}};else(estFaceMur){gauche();avance();avance();gauche();avance();}
                                                                                   ^