welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
if(!estFaceMur){while(!estFaceMur){while(!estSurBiscuit){recule();}
prendBiscuit();porteBiscuit()
while(!estSurBiscuit){avance();};recule();poseBiscuit();recule()}};else(estFaceMur){gauche();avance();avance();gauche();avance();}


